--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "babel-loader": "^8.1.0",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-scripts": "^3.4.1",
+    "react-spring": "^8.0.27"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.18",
